# Tugas4-IF4073

./: .gitignore  PemCitTradisional.ipynb  README.md  pyproject.toml
dataset/: data.yaml
src/: GUI.py  deep_learning.py
src/utils/: extract_features.py  predict.py  segment_image.py  visualize_bboxes.py
